[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/projector_enemie.gd" type="Script" id=1]
[ext_resource path="res://sprites/environment/projector_light_2.png" type="Texture" id=2]
[ext_resource path="res://sprites/enemies/projector_enemie.png" type="Texture" id=3]
[ext_resource path="res://sprites/environment/projector.png" type="Texture" id=4]
[ext_resource path="res://sprites/environment/projector_light_1.png" type="Texture" id=5]
[ext_resource path="res://shaders/projector_shader.tres" type="Material" id=6]
[ext_resource path="res://sprites/environment/projector_light_3.png" type="Texture" id=7]
[ext_resource path="res://sprites/environment/projector_light_4.png" type="Texture" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.0
height = 14.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "on",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "off",
"speed": 5.0
} ]

[node name="projector" type="Area2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 4
script = ExtResource( 1 )

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2( 0, 14 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="sprite" type="Sprite" parent="."]
modulate = Color( 0.74902, 0.74902, 0.74902, 1 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="flash" type="AnimatedSprite" parent="."]
self_modulate = Color( 2, 3, 3, 1 )
frames = SubResource( 2 )
animation = "on"
__meta__ = {
"_edit_lock_": true
}

[node name="pojector_sprite" type="Sprite" parent="."]
modulate = Color( 1.8, 1.8, 1.8, 1 )
material = ExtResource( 6 )
position = Vector2( 0, 3 )
texture = ExtResource( 3 )

[node name="tween" type="Tween" parent="."]
playback_speed = 4.0
playback/speed = 4.0

[node name="timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_projector_area_entered"]
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
